--- a/styles.css
+++ b/styles.css
@@ -52,3 +52,29 @@ h1, h2, h3, h4, h5, h6 {
 #root, #__next {
   isolation: isolate;
 }
+
+/* Styling starts from here */
+:root {
+  --font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.game-board {
+  border: 2px solid;
+  width: 35vw;
+  height: 35vw;
+
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.square-cell {
+  border: 1px solid
+}
