--- a/styles.css
+++ b/styles.css
@@ -58,12 +58,22 @@ h1, h2, h3, h4, h5, h6 {
   --font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+body {
+  font-family: var(--font-family);
+}
+
 .container {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+}
+
+.game-score {
+  display: flex;
+  justify-content: space-evenly;
+  border:  2px solid
 }
 
 .game-board {
@@ -76,5 +86,5 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .square-cell {
-  border: 1px solid
+  border: 1px solid;
 }
