--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,8 @@ h1, h2, h3, h4, h5, h6 {
 /* Styling starts from here */
 :root {
   --font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  --border-radius: 4px;
+
 }
 
 body {
@@ -70,6 +72,25 @@ body {
   justify-content: space-between;
 }
 
+
+.nav-info {
+  position:relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1em 0;
+}
+
+button.restart {
+  position: absolute;
+  right: 0;
+  bottom: 0.6em;
+
+  border: none;
+  border-radius: var(--border-radius);
+  padding: 0.5em 1.5em;
+}
+
 .game-score {
   display: flex;
   justify-content: space-evenly;
@@ -77,14 +98,20 @@ body {
 }
 
 .game-board {
-  border: 2px solid;
+  border: 2px solid #333;
   width: 35vw;
   height: 35vw;
 
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
 }
 
 .square-cell {
   border: 1px solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 8em;
 }
+
