--- a/styles.css
+++ b/styles.css
@@ -115,3 +115,19 @@ button.restart {
   font-size: 8em;
 }
 
+.game-dialog {
+  margin: auto;
+  font-size: 2em;
+}
+
+.button-dialog {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 1.5em;
+}
+
+.button-dialog button {
+  padding: 10px 30px;
+  border: none;
+
+}
