--- a/styles.css
+++ b/styles.css
@@ -115,9 +115,10 @@ button.restart {
   font-size: 8em;
 }
 
-.game-dialog {
+.game-dialog,
+.player-name-dialog {
   margin: auto;
-  font-size: 2em;
+  font-size: 1.5em;
 }
 
 .button-dialog {
