--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,11 @@ button.restart {
   padding: 1vh 2vw;
 }
 
+button.restart:hover {
+  cursor: pointer;
+  border: 1px solid #000;
+}
+
 .game-score {
   display: flex;
   justify-content: space-evenly;
@@ -121,7 +126,16 @@ button.restart {
 .game-dialog,
 .player-name-dialog {
   margin: auto;
-  font-size: 1.5em;
+  width: 60vmin;
+  height: 65vmin;
+  max-width: 300px;
+  max-height: 350px;
+  font-size: 1em;
+}
+
+.player-name-dialog h3 {
+  text-align: center;
+  margin-bottom: 1em;
 }
 
 .button-dialog {
@@ -131,7 +145,25 @@ button.restart {
 }
 
 .button-dialog button {
-  padding: 10px 20px;
-  border: none;
+  padding: 1em 2em;
+  border: transparent;
+}
 
+.button-dialog button:hover {
+  border: 1px solid #000;
+  cursor: pointer;  
+}
+
+.form-row {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  gap:0.8em;
+}
+
+.form-row input {
+  width: 50%;
+  padding: 0.5em;
+  font-size: 0.8em;
 }
