--- a/styles.css
+++ b/styles.css
@@ -57,11 +57,17 @@ h1, h2, h3, h4, h5, h6 {
 :root {
   --font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   --border-radius: 4px;
-
+  --primary-color: #E1F5F2;
+  --secondary-color: #6BC5D2;
+  --foreground-color: #5A5D9D;
+  --background-color: #390050;
 }
 
 body {
   font-family: var(--font-family);
+  
+  color:var(--primary-color);
+  background-color: var(--background-color);
 }
 
 .container {
@@ -72,6 +78,12 @@ body {
   justify-content: space-between;
 }
 
+.main-content {
+  display:flex; 
+  flex-direction: column;
+  gap: 0.5em;
+  margin-top: 5em
+}
 
 .nav-info {
   position:relative;
@@ -84,11 +96,10 @@ body {
 button.restart {
   position: absolute;
   right: 0;
-  bottom: 0.6em;
 
   border: none;
   border-radius: var(--border-radius);
-  padding: 1vh 2vw;
+  padding: 0.8vh 1.5vw;
 }
 
 button.restart:hover {
@@ -98,12 +109,19 @@ button.restart:hover {
 
 .game-score {
   display: flex;
-  justify-content: space-evenly;
-  border:  2px solid
+  border:1px solid var(--foreground-color);
+  border-radius: var(--border-radius);
+  margin-bottom: 2.5em;
+  font-size: 1.2em;
+}
+
+.game-score > div {
+  flex: 1 1 0px;
+  text-align: center;
+  padding: 0.8em 1.4em;
 }
 
 .game-board {
-  border: 2px solid #333;
   width: 90vmin;
   height: 90vmin;
   max-width: 500px;
@@ -116,16 +134,31 @@ button.restart:hover {
 }
 
 .square-cell {
-  border: 1px solid;
+  border: 4px solid var(--foreground-color);
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 6em;
 }
 
+.square-cell:nth-child(-n + 3) {
+  border-top: none;
+}
+
+.square-cell:nth-child(3n+1) {
+ border-left: none;
+}
+
+.square-cell:nth-child(3n+3) {
+  border-right: none;
+}
+
+.square-cell:nth-last-child(-n + 3) {
+  border-bottom: none;
+}
+
 .square-cell:hover {
   cursor: pointer;
-  background-color: #f0f0f0;
 }
 
 .game-dialog,
@@ -183,7 +216,7 @@ button.restart:hover {
 
 .footer a {
   text-decoration: none;
-  color: black;
+  color: var(--primary-color);
 }
 
 @media (max-width: 500px) {
